--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
 
-<header> Basic htm test 1 </header>
+<h1> This is a website </h1>
 
-<h1> this is a subheading</h1>
+<p>
+see it has text and everything
+
+</p>
 
 </html>
