--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
 <p>
 see it has text and everything
-
 </p>
+
+<button>you can even press this button!</button>
+
+<p>i dont care that it does nothing</p>
 
 </html>
