--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html>
 
+<head>
+
 <title>test site</title>
+
+</head>
+
+
 
 <h1> This is a website </h1>
 
-<p>
-see it has text and everything
-</p>
+<p>see it has text and everything</p>
 
 <button>you can even press this button!</button>
 
