--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
-    
+
 <head>
+<meta
+  name="description"
+  content="Lorum Ipsum" />
 
 <title>test site</title>
 
@@ -14,5 +17,7 @@
 <button>you can even press this button!</button>
 
 <p>i dont care that it does nothing</p>
+
+<img src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true />
 
 </html>
