--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <title>test site</title>
 
+<link rel="icon" src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true type="image/x-icon"/>
+
 </head>
 
 <h1> This is a website </h1>
@@ -18,6 +20,6 @@
 
 <p>i dont care that it does nothing</p>
 
-<img src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true />
+<img src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true/>
 
 </html>
