--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <title>test site</title>
 
-<link rel="icon" src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true type="image/x-icon"/>
+<link rel="icon" href="Test Icon.icon" type="image/x-icon" />
 
 </head>
 
