--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <title>test site</title>
 
-<link rel="icon" href="Test Icon.icon" type="image/x-icon" />
+<link rel="icon" href="Test Icon.ico" type="image/x-icon" />
 
 </head>
 
