second image test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
 <p>i dont care that it does nothing</p>
 
-<img src=https://github.com/20edixon/20edixon.github.io/blob/main/Test%20Icon.webp?raw=true/>
+<img src="Test Icon.webp"/>
 
 </html>
