--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
 
+<link rel="stylesheet" href="styles.css" />
+
 </head>
+
+
 
 <h1> This is a website </h1>
 
