--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 </head>
 
 
-
-<h1> This is a website </h1>
+<div class = t_box> This is a website </div>
 
 <p>see it has text and everything</p>
 
