--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
 </head>
 
-
-<div class = t_box> This is a website </div>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.asp">About</a></li>
+  <li><a href="projects.asp">Projects</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+</ul>
 
 <p>see it has text and everything</p>
 
