--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=http://https://github.com/20edixon/20edixon.github.io/home'>
+  <meta http-equiv='refresh' content='0; URL=http://https://github.com/20edixon/home'>
 </head>
