--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <ul>
   <li><b>test</b></li>
-  <li><c href="index.html">Home</c></li>
+  <li><c href="home.html">Home</c></li>
   <li><a href="about.asp">About</a></li>
   <li><a href="projects.asp">Projects</a></li>
   <li><a href="contact.asp">Contact</a></li>
