--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://20edixon.github.io/home.html">
+<meta http-equiv="refresh" content="0; url=home.html" />
