added multi pages

--- a/home.html
+++ b/home.html
@@ -17,12 +17,12 @@
 <ul>
   <li><b>test</b></li>
   <li><c href="home.html">Home</c></li>
-  <li><a href="about.asp">About</a></li>
-  <li><a href="projects.asp">Projects</a></li>
-  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
 
-<p>see it has text and everything</p>
+<h1>Hello!</h1>
 
 <button>you can even press this button!</button>
 
