--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,25 @@
-<contact_box>test</contact_box>
+<!doctype html>
+<html>
+
+<head>
+<meta
+  name="description"
+  content="Lorum Ipsum" />
+
+<title>test site</title>
+
+<link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
+
+<link rel="stylesheet" href="styles.css" />
+
+</head>
+
+<ul>
+  <li><b>test</b></li>
+  <li><a href="home.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><c href="contact.html">Contact</c></li>
+</ul>
+
+<div class = "contact_box"> text</div>
