--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 
 <button>you can even press this button!</button>
 
-<p>i dont care that it does nothing</p>
+<div class= "main_test"> i dont care that it does nothing</div>
 
 <img src="images/Test Icon.webp"/>
 
