--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,17 @@
 
 </head>
 
-<ul>
-  <li><b>test</b></li>
-  <li><a href="home.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="projects.html">Projects</a></li>
-  <li><c href="contact.html">Contact</c></li>
-</ul>
+<body>
+<nav class = "navbar">
+  <ul>
+    <li><b>test</b></li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><c href="contact.html">Contact</c></li>
+  </ul>
+</nav>
 
 <div class = "contact_box"> text</div>
-
+</body>
 </html>
