--- a/projects.html
+++ b/projects.html
@@ -14,12 +14,14 @@
 
 </head>
 
-<ul>
-  <li><b>test</b></li>
-  <li><a href="home.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><c href="projects.html">Projects</c></li>
-  <li><a href="contact.html">Contact</a></li>
-</ul>
+<nav class = "navbar">
+  <ul>
+    <li><b>test</b></li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><c href="projects.html">Projects</c></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
 </html>
