--- a/about.html
+++ b/about.html
@@ -14,12 +14,16 @@
 
 </head>
 
-<ul>
-  <li><b>test</b></li>
-  <li><a href="home.html">Home</a></li>
-  <li><c href="about.html">About</c></li>
-  <li><a href="projects.html">Projects</a></li>
-  <li><a href="contact.html">Contact</a></li>
-</ul>
-
+ <body>
+<nav class="navbar">
+  <ul>
+    <li><b>test</b></li>
+    <li><a href="home.html">Home</a></li>
+    <li><c href="about.html">About</c></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+  
+</body>
 </html>
