--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="styles.css" />
 
 </head>
-
+<nav class="navbar">
 <ul>
   <li><b>test</b></li>
   <li><c href="home.html">Home</c></li>
@@ -21,6 +21,8 @@
   <li><a href="projects.html">Projects</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
+
+</nav>
 
 <h1>Hello!</h1>
 
