margin fix (finally!)

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
 <button>you can even press this button!</button>
 
-<div class= "main_test"> i dont care that it does nothing</div>
+<div class= "main_text"> i dont care that it does nothing</div>
 
 <img src="images/Test Icon.webp"/>
 
