started contacts page

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
   </ul>
 </nav>
 
-<div class = "contact_box">text</div>
+<div class = "contact_box">Feel free to get in touch at:
+<br> test
+</div>
 </body>
 </html>
