--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,9 @@
   </ul>
 </nav>
 
-<div class = "contact_box">Feel free to get in touch at:
-<br> test
+<div class = "default_box">Feel free to get in touch at:
+<br><br> Email: <a href = "mailto: 20edixon@thelangton.org.uk">20edixon@thelangton.org.uk</a>
 </div>
+
 </body>
 </html>
