started projects page

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
   </ul>
 </nav>
 
-<div class = "default_box">Feel free to get in touch at:
-<br><br> Email: <a href = "mailto: 20edixon@thelangton.org.uk">20edixon@thelangton.org.uk</a>
+<div class = "contact_box">Feel free to get in touch at:
+<br><br> Email: 20edixon@thelangton.org.uk
 </div>
 
 </body>
