fixed project box text

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
   </ul>
 </nav>
 
-<div class = "project_box"> <img src = "images/Test Icon.webp"> <div class = "text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex. Quisque sit amet ligula tempor, tristique nisi sed, volutpat lorem. Donec ac turpis eget leo placerat sollicitudin sed vel orci. Suspendisse dictum tempor condimentum. Duis sagittis magna eu nisl tempus semper. Donec tincidunt hendrerit nibh, et sagittis turpis rhoncus ut.</div></div>
+<div class = "project_box">
+  <div><img src = "images/Test Icon.webp"></div> 
+  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex. Quisque sit amet ligula tempor, tristique nisi sed, volutpat lorem. Donec ac turpis eget leo placerat sollicitudin sed vel orci. Suspendisse dictum tempor condimentum. Duis sagittis magna eu nisl tempus semper. Donec tincidunt hendrerit nibh, et sagittis turpis rhoncus ut.</div>
 
 </html>
