project page button added

--- a/projects.html
+++ b/projects.html
@@ -26,5 +26,7 @@
 
 <div class = "project_box">
   <div><img src = "images/Test Icon.webp"></div> 
-  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex.</div>
-</html>
+  <div class = "text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex.</div>
+  <div></div>
+  <div class = "button">See More</div>
+  </html>
