--- a/projects.html
+++ b/projects.html
@@ -28,5 +28,5 @@
   <div><img src = "images/Test Icon.webp"></div> 
   <div class = "text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex.</div>
   <div></div>
-  <div><a href="404"></a><div class = "button">See More</div></a></div>
+  <div><a href="404.html"><div class = "button">See More</div></a></div>
   </html>
