added project page text

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
 <div class = "project_box">
   <div><img src = "images/Test Icon.webp"></div> 
-  <div class = "text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis sapien eu scelerisque interdum. Aliquam hendrerit semper leo, non semper lectus. Aenean non suscipit ex.</div>
+  <div class = "text">Any coding projects that I am working/have worked will be listed here, with downlaod liks and an explenation of the project itself.</div>
   <div></div>
   <div><a href="404.html"><div class = "button">See More</div></a></div>
   </html>
