--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 </nav>
 
 <div class = "project_box">
-  <div><img src = "images/Test Icon.webp"></div> 
+  <div><img src = "images/placeholder.webp"></div> 
   <div class = "text">Any coding projects that I am working/have worked will be listed here, with downlaod liks and an explenation of the project itself.</div>
   <div></div>
   <div><a href="404.html"><div class = "button">See More</div></a></div>
