--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   name="description"
   content="Lorum Ipsum" />
 
-<title>test site</title>
+<title>Elliott Dixon - Portfolio</title>
 
 <link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
 
@@ -26,7 +26,8 @@
 
 <div class = "project_box">
   <div><img src = "images/placeholder.webp"></div> 
-  <div class = "text">Any coding projects that I am working/have worked will be listed here, with downlaod liks and an explenation of the project itself.</div>
+  <div class = "text">Any coding projects that I am working/have worked will be listed here, with download links and an explenation of the project itself.</div>
   <div></div>
   <div><a href="404.html"><div class = "button">See More</div></a></div>
-  </html>
+
+</html>
