--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   name="description"
   content="Lorum Ipsum" />
 
-<title>test site</title>
+<title>Elliott Dixon - Portfolio</title>
 
 <link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
 
