--- a/home.html
+++ b/home.html
@@ -25,8 +25,6 @@
 
 </nav>
 
-<h1>Hello!</h1>
-
-<div class= "main_text"> i dont care that it does nothing</div>
+<h1>Hello! Welcome to my website.</h1>
 
 </html>
