--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
 <div class = "project_box">
   <div><img src = "images/placeholder.webp"></div> 
-  <div class = "text">Any coding projects that I am working/have worked will be listed here, with download links and an explenation of the project itself.</div>
+  <div class = "text">Any coding projects that I am working/have worked on will be listed here, with download links and an explanation of the project itself.</div>
   <div></div>
   <div><a href="404.html"><div class = "button">See More</div></a></div>
 
