added about page

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
   </ul>
 </nav>
 
+<h1>My Projects</h1>
+
 <div class = "project_box">
   <div><img src = "images/placeholder.webp"></div> 
   <div class = "text">Any coding projects that I am working/have worked on will be listed here, with download links and an explanation of the project itself.</div>
