--- a/about.html
+++ b/about.html
@@ -25,7 +25,27 @@
     </ul>
 </nav>
   
-<div class = "about_box">My name is Elliott, I'm a:<br></div>
+<h1>About Me</h1>
+<div class = "about_box">
+  I'm an A level student from Kent currently studying Edexcel CS. I am 
+  fluent in a variety of languages such as HTML, CSS and Python, that I 
+  have used in my studies and in the creation of this website<br><br>
+
+ <img src = "images/html5.png" style="float:right; width:300px; height:auto; border-radius:25px; margin-left:20px;">
+
+  I have a passion for coding and technology, and I am always looking to 
+  learn new skills and improve my existing ones. In my free time, I enjoy 
+  working on personal coding projects, gaming and playing a variety of musical 
+  instruments.<br><br>
+
+  This website serves as a portfolio of my work and a platform to share my 
+  thoughts and ideas on various topics related to technology and coding. 
+  Feel free to explore the different sections of the website to learn more 
+  about me and my projects. If you have any questions or would like to get 
+  in touch, please don't hesitate to contact me through the contact page. 
+
+
+</div>
 
 </body>
 </html>
