--- a/about.html
+++ b/about.html
@@ -29,9 +29,13 @@
 <div class = "about_box">
   I'm an A level student from Kent currently studying Edexcel CS. I am 
   fluent in a variety of languages such as HTML, CSS and Python, that I 
-  have used in my studies and in the creation of this website<br><br>
+  have used in my studies and in the creation of this website
 
- <img src = "images/html5.png" style="float:right; width:300px; height:auto; border-radius:25px; margin-left:20px;">
+  <img src = "images/html5.png" >
+  <img src = "images/css.png" >
+  <img src = "images/python.png" >
+
+ <br><br>
 
   I have a passion for coding and technology, and I am always looking to 
   learn new skills and improve my existing ones. In my free time, I enjoy 
