fixed about images

--- a/about.html
+++ b/about.html
@@ -31,11 +31,7 @@
   fluent in a variety of languages such as HTML, CSS and Python, that I 
   have used in my studies and in the creation of this website
 
-  <div class = "about_images">
-    <img src = "images/html5.png" >
-    <img src = "images/css.png" >
-    <img src = "images/python.png" >
-  </div>
+  <img src="htm + css logo.png">
 
  <br><br>
 
