about images fix

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   fluent in a variety of languages such as HTML, CSS and Python, that I 
   have used in my studies and in the creation of this website
 
-  <img src="htm + css logo.png">
+  <img src="images/html + css logo.png">
 
  <br><br>
 
