--- a/about.html
+++ b/about.html
@@ -27,24 +27,28 @@
   
 <h1>About Me</h1>
 <div class = "about_box">
-  I'm an A level student from Kent currently studying Edexcel CS. I am 
-  fluent in a variety of languages such as HTML, CSS and Python, that I 
-  have used in my studies and in the creation of this website
+  Hello! I'm Elliott, an A Level student from Kent, currently studying Edexcel Computer Science. I am 
+  fluent in a variety of programming languages such as HTML, CSS and Python, that I 
+  have used in my studies and in the creation of this website.
 
-  <img src="images/html + css logo.png">
+  <img src="images/programming logos.png">
 
  <br><br>
 
-  I have a passion for coding and technology, and I am always looking to 
-  learn new skills and improve my existing ones. In my free time, I enjoy 
-  working on personal coding projects, gaming and playing a variety of musical 
-  instruments.<br><br>
+  I have a passion for coding and technology, and I am always looking for
+  new ways to improve my existing skills and learn new ones. <br><br>
+  
+  In my free time, I enjoy working on personal coding projects, gaming, 
+  and playing a variety of musical instruments.<br><br>
 
-  This website serves as a portfolio of my work and a platform to share my 
-  thoughts and ideas on various topics related to technology and coding. 
-  Feel free to explore the different sections of the website to learn more 
-  about me and my projects. If you have any questions or would like to get 
-  in touch, please don't hesitate to contact me through the contact page. 
+  This website serves as a portfolio of my work and a platform to share 
+  my thoughts and ideas on various topics related to technology and 
+  coding. <br><br>
+  
+  Feel free to explore the different sections of the website to learn 
+  more about me and my projects. If you have any questions or would like 
+  to get in touch, please don't hesitate to contact me through the 
+  contact page. 
 
 
 </div>
