more baout page stuff

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
   </ul>
 </nav>
 
+<h1>Contact Me</h1>
+
 <div class = "contact_box">Feel free to get in touch at:
 <br><br> Email: 20edixon@thelangton.org.uk
 </div>
