--- a/about.html
+++ b/about.html
@@ -27,19 +27,27 @@
   
 <h1>About Me</h1>
 <div class = "about_box">
-  Hello! I'm Elliott, an A Level student from Kent, currently studying Edexcel Computer Science. I am 
-  fluent in a variety of programming languages such as HTML, CSS and Python, that I 
-  have used in my studies and in the creation of this website.
+  <div class = "logos"><img src="images/programming logos.png"></div> 
 
-  <img src="images/programming logos.png">
-
- <br><br>
+  Hello! I'm Elliott, an A Level student from Kent, currently studying 
+  Edexcel Computer Science. I am fluent in a variety of programming 
+  languages such as HTML, CSS and Python, that I have used in my studies 
+  and in the creation of this website. <br><br>
 
   I have a passion for coding and technology, and I am always looking for
-  new ways to improve my existing skills and learn new ones. <br><br>
+  new ways to improve my existing skills and learn new ones.<br><br>
   
   In my free time, I enjoy working on personal coding projects, gaming, 
-  and playing a variety of musical instruments.<br><br>
+  and playing a variety of musical instruments. History, particularly 
+  15th Century Europe, is another personal intresest, one that I have 
+  been fortunate enough to reaserch as part of my studies.<br><br>
+
+  I am also involved in Vex Robotics, and am the lead programmer for
+  my school's team, though I take on a variety of other responsibilities,
+  such as editing our notebook. As a team we have accomplished much over 
+  the years we have been involved with vex, competing at a national level
+  every year, and even at an international level in the 2022-2023 season. 
+  <br><br>
 
   This website serves as a portfolio of my work and a platform to share 
   my thoughts and ideas on various topics related to technology and 
@@ -49,7 +57,6 @@
   more about me and my projects. If you have any questions or would like 
   to get in touch, please don't hesitate to contact me through the 
   contact page. 
-
 
 </div>
 
