--- a/about.html
+++ b/about.html
@@ -40,13 +40,18 @@
   In my free time, I enjoy working on personal coding projects, gaming, 
   and playing a variety of musical instruments. History, particularly 
   15th Century Europe, is another personal intresest, one that I have 
-  been fortunate enough to reaserch as part of my studies.<br><br>
+  been fortunate enough to reaserch as part of my studies.
+  
+  <div class = "vex"><img src="images/vex logo.png"></div>
 
-  I am also involved in Vex Robotics, and am the lead programmer for
+  <br><br>
+
+  I am also involved in <a href="https://www.vexrobotics.com/?___store=vexroboticsuk&___from_store=vexrobotics&srsltid=AfmBOopbcUHv2DJAIgG4_22z0OQTQ9A9EebBQXnviWzb-Hvy5f-l9DOy">
+    Vex Robotics</a>, and am the lead programmer for
   my school's team, though I take on a variety of other responsibilities,
-  such as editing our notebook. As a team we have accomplished much over 
-  the years we have been involved with vex, competing at a national level
-  every year, and even at an international level in the 2022-2023 season. 
+  such as editing our notebook. As a team, we have accomplished much over 
+  the years, competing at national level, and even at international level
+  in the 2022-2023 season. 
   <br><br>
 
   This website serves as a portfolio of my work and a platform to share 
