--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
 <title>Elliott Dixon - Portfolio</title>
 
-<link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
+<link rel="icon" href="images/ED.ico" type="image/x-icon" />
 
 <link rel="stylesheet" href="styles.css" />
 
@@ -17,7 +17,7 @@
  <body>
 <nav class="navbar">
   <ul>
-    <li><b>test</b></li>
+    <li><b><img src="images/ED.png"></b></li>
     <li><a href="home.html">Home</a></li>
     <li><c href="about.html">About</c></li>
     <li><a href="projects.html">Projects</a></li>
