--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 
 <title>Elliott Dixon - Portfolio</title>
 
-<link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
+<link rel="icon" href="images/ED.ico" type="image/x-icon" />
 
 <link rel="stylesheet" href="styles.css" />
 
@@ -16,7 +16,7 @@
 
 <nav class="navbar">
   <ul>
-    <li><b>test</b></li>
+    <li><b><img src="images/ED.png"></b></li>
     <li><c href="home.html">Home</c></li>
     <li><a href="about.html">About</a></li>
     <li><a href="projects.html">Projects</a></li>
@@ -26,5 +26,12 @@
 </nav>
 
 <h1>Hello! Welcome to my website.</h1>
+
+<div class = "home_images">
+  <img src="images/ED.png">
+  <img src="images/ED.png">
+</div>
+
+<div class = "home_box"> test</div>
 
 </html>
