--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 
 <title>Elliott Dixon - Portfolio</title>
 
-<link rel="icon" href="images/Test Icon.ico" type="image/x-icon" />
+<link rel="icon" href="images/ED.ico" type="image/x-icon" />
 
 <link rel="stylesheet" href="styles.css" />
 
@@ -16,7 +16,7 @@
 
 <nav class = "navbar">
   <ul>
-    <li><b>test</b></li>
+    <li><b><img src="images/ED.png"></b></li>
     <li><a href="home.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><c href="projects.html">Projects</c></li>
