home images edits

--- a/home.html
+++ b/home.html
@@ -28,10 +28,14 @@
 <h1>Hello! Welcome to my website.</h1>
 
 <div class = "home_images">
-  <img src="images/ED.png">
+  <img src="images/vex robot.jpg">
   <img src="images/ED.png">
 </div>
 
-<div class = "home_box"> test</div>
+<div class = "home_box"> 
+  This is a website portfolio about myself, feel free to check out the 
+  different sections and tabs to learn more about me and my work!
+
+</div>
 
 </html>
