finished home page

--- a/home.html
+++ b/home.html
@@ -28,8 +28,9 @@
 <h1>Hello! Welcome to my website.</h1>
 
 <div class = "home_images">
-  <img src="images/vex robot.jpg">
-  <img src="images/ED.png">
+  <div class = "img1"><img src="images/vex robot.jpg"></div>
+  <div class = "spacer"></div>
+  <div class = "img2"><img src="images/code snippet.png"></div>
 </div>
 
 <div class = "home_box"> 
