--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
 
   <br><br>
 
-  I am also involved in <a href="https://www.vexrobotics.com/?___store=vexroboticsuk&___from_store=vexrobotics&srsltid=AfmBOopbcUHv2DJAIgG4_22z0OQTQ9A9EebBQXnviWzb-Hvy5f-l9DOy">
-    Vex Robotics</a>, and am the lead programmer for
+  I am also involved in Vex Robotics (see more on the "Projects" page) and am the lead programmer for
   my school's team, though I take on a variety of other responsibilities,
   such as editing our notebook. As a team, we have accomplished much over 
   the years, competing at national level, and even at international level
