--- a/projects.html
+++ b/projects.html
@@ -24,19 +24,25 @@
   </ul>
 </nav>
 
+<body>
+
 <h1>My Projects</h1>
 
 <div class = "project_box">
-  <div><img src = "images/placeholder.webp"></div> 
+  <div><img src = "images/vex robot.jpg"></div> 
   <div class = "text">
 
-    <h2>Project Title</h2>
+    <h2>Vex Robotics</h2>
 
-    Any coding projects that I am working/have worked on will 
-    be listed here, with download links and an explanation of 
-    the project itself.
+    Read about my, and my team's, envolvement with the 
+    international robotics competition Vex Robotics. This 
+    includes my role within the team, the robots we have 
+    built, the seasons we have played in, and our 
+    overall acomplishments.
   </div>
   <div></div>
-  <div><a href="404.html"><div class = "button">See More</div></a></div>
+  <div><a href="projects/vex.html"><div class = "button">See More</div></a></div>
+</div>
 
+</body>
 </html>
