--- a/about.html
+++ b/about.html
@@ -46,11 +46,11 @@
 
   <br><br>
 
-  I am also involved in Vex Robotics (see more on the "Projects" page) and am the lead programmer for
-  my school's team, though I take on a variety of other responsibilities,
-  such as editing our notebook. As a team, we have accomplished much over 
-  the years, competing at national level, and even at international level
-  in the 2022-2023 season. 
+  I am also involved in Vex Robotics (see more on the "Projects" page) and 
+  am the lead programmer for my school's team, though I take on a variety 
+  of other responsibilities, such as editing our notebook. As a team, we 
+  have accomplished much over the years, competing at national level, and 
+  even at international level in the 2022-2023 season. 
   <br><br>
 
   This website serves as a portfolio of my work and a platform to share 
