started vex page

--- a/projects/vex.html
+++ b/projects/vex.html
@@ -29,7 +29,7 @@
 <h1>Vex Robotics</h1>
 
 <div class = "vex_box">
-  <img src="">
-  <h2>2022-2023 Season</h2>
+  <div class = "img"><img src="../images/Slapshot robot.jpg"></div>
+  <div class = "text"><h2>2022-2023 Season</h2></div>
 
 </div>
