--- a/projects/vex.html
+++ b/projects/vex.html
@@ -65,7 +65,7 @@
 <div class = "spacer"></div>
 
 <div class = "vex_box">
-  <div class = "img"><img src="../images/Slapshot robot.jpg"></div>
+  <div class = "img"><img src="../images/over under robot.jpg"></div>
   <div class = "text">
     
     <h2>2023-2024 Season - Over under</h2>
@@ -81,7 +81,7 @@
 <div class = "spacer"></div>
 
 <div class = "vex_box">
-  <div class = "img"><img src="../images/Slapshot robot.jpg"></div>
+  <div class = "img"><img src="../images/high stakes robot.jpg"></div>
   <div class = "text">
     
     <h2>2024-2025 Season - High Stakes</h2>
