--- a/projects/vex.html
+++ b/projects/vex.html
@@ -95,7 +95,7 @@
 <div class = "spacer"></div>
 
 <div class = "vex_box">
-  <div class = "img"><img src="../images/Slapshot robot.jpg"></div>
+  <div class = "img"><img src="../images/vex robot.jpg"></div>
   <div class = "text">
     
     <h2>Current Season - Push Back</h2>
