--- a/projects/vex.html
+++ b/projects/vex.html
@@ -29,7 +29,8 @@
 <h1>Vex Robotics</h1>
 
 <div class = "vex_box">
-  <div class = "img"><img src="../images/Slapshot robot.jpg"></div>
+  <div class = "img"><img src="../images/Slapshot robot.jpg">
+  <div class = "link">A link to the competition can be found <a href = "https://youtu.be/vF3I8FscrKo?si=m7hk9zDBAdu_pZAh">here</a></div> </div>
   <div class = "text">
     
     <h2>2022-2023 Season - slapshot</h2>
@@ -53,10 +54,6 @@
 
     During the season I was one of the drivers for the team, though I was 
     also involved in the construction and coding of the robot.
-
-    <br><br>
-
-    A link to the competition can be found <a href = "https://youtu.be/vF3I8FscrKo?si=m7hk9zDBAdu_pZAh">here</a>
   
   </div>
 
