added back button

--- a/projects/vex.html
+++ b/projects/vex.html
@@ -145,3 +145,5 @@
   </div>
 
 </div>
+
+<div class = "back_link"><a href="../projects.html"><div class = "back_button">Return to projects page</div></a></div>
