--- a/projects/vex.html
+++ b/projects/vex.html
@@ -33,7 +33,7 @@
   <div class = "link">A link to the competition can be found <a href = "https://youtu.be/vF3I8FscrKo?si=m7hk9zDBAdu_pZAh">here</a></div> </div>
   <div class = "text">
     
-    <h2>2022-2023 Season - slapshot</h2>
+    <h2>2022-2023 Season - Slapshot</h2>
 
     Our team debuted in the 2022-2023 Season "Slapshot" under the name "AAA", 
     standing for always above avarage. This season was by far our most 
@@ -66,7 +66,7 @@
   <div class = "link">A link to the competition can be found <a href = "https://youtu.be/dvDqEI7qO34?si=v2hHqsZjaYqsXEdp">here</a></div></div>
   <div class = "text">
     
-    <h2>2023-2024 Season - Over under</h2>
+    <h2>2023-2024 Season - Over Under</h2>
 
     In Vex Robotics, different age groups compete at different levels,
     and during this season we were promoted from the plastic Vex IQ, to the
