small spag fixes

--- a/projects/vex.html
+++ b/projects/vex.html
@@ -36,7 +36,7 @@
     <h2>2022-2023 Season - Slapshot</h2>
 
     Our team debuted in the 2022-2023 Season "Slapshot" under the name "AAA", 
-    standing for always above avarage. This season was by far our most 
+    standing for Always Above Avarage. This season was by far our most 
     sucessful. Our robot, pictured on the left, was undefeated in the 
     regional competitoins, and we finished as sixth best team in the 
     country at the national level. We also won an award for the best 
@@ -111,7 +111,7 @@
     <br><br>
 
     This was the first year where my main purpose was to be the programmer for the team.
-    It took my some time to adjust to my new responsibilities, but also to understand the 
+    It took me some time to adjust to my new responsibilities, but also to understand the 
     quirks of vexcode. Many of the programs for driving, swithces, and other esentials I 
     wrote in this season are still used in our robot today.
 
@@ -146,4 +146,12 @@
 
 </div>
 
-<div class = "back_link"><a href="../projects.html"><div class = "back_button">Return to projects page</div></a></div>
+<div class = "back_link">
+
+  <a href="../projects.html">
+
+    <div class = "back_button">Return to projects page
+
+    </div>
+  </a>
+</div>
