--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
   
   In my free time, I enjoy working on personal coding projects, gaming, 
   and playing a variety of musical instruments. History, particularly 
-  15th Century Europe, is another personal intresest, one that I have 
-  been fortunate enough to reaserch as part of my studies.
+  15th Century Europe, is another personal interest, one that I have 
+  been fortunate enough to reasearch as part of my studies.
   
   <div class = "vex"><img src="images/vex logo.png"></div>
 
