--- a/projects.html
+++ b/projects.html
@@ -34,11 +34,11 @@
 
     <h2>Vex Robotics</h2>
 
-    Read about my, and my team's, envolvement with the 
+    Read about my, and my team's, involvement with the 
     international robotics competition Vex Robotics. This 
     includes my role within the team, the robots we have 
     built, the seasons we have played in, and our 
-    overall acomplishments.
+    overall accomplishments.
   </div>
   <div></div>
   <div><a href="projects/vex.html"><div class = "button">See More</div></a></div>
