--- a/projects/vex.html
+++ b/projects/vex.html
@@ -36,18 +36,18 @@
     <h2>2022-2023 Season - Slapshot</h2>
 
     Our team debuted in the 2022-2023 Season "Slapshot" under the name "AAA", 
-    standing for Always Above Avarage. This season was by far our most 
-    sucessful. Our robot, pictured on the left, was undefeated in the 
-    regional competitoins, and we finished as sixth best team in the 
+    standing for Always Above Average. This season was by far our most 
+    successful. Our robot, pictured on the left, was undefeated in the 
+    regional competitions, and we finished as sixth best team in the 
     country at the national level. We also won an award for the best 
     constructed robot, which qualified us for the world championship 
-    in Dallas, Teaxs. Here, we fianlly met out match, and finished 36th 
+    in Dallas, Texas. Here, we finally met out match, and finished 36th 
     in our league.
 
     <br><br>
 
     The legacy of this robot is still very much alive however, even after 
-    its dismantling. This piture of our robot is one of the first images
+    its dismantling. This picture of our robot is one of the first images
     that appears when searching "vex robotics" into google. 
 
     <br><br>
@@ -73,7 +73,7 @@
     metal Vex V5. This was a whole new experience for the team, and our
     unfamiliarity with the new system showed. We were unable to replicate
     the success of the previous season, barely qualifying for the national
-    competetion, but achieving nothing there.
+    competition, but achieving nothing there.
     
     <br><br>
 
@@ -95,11 +95,11 @@
     <h2>2024-2025 Season - High Stakes</h2>
 
     In reflection of the previous season, we rebranded the team to "Ahuramazda",
-    an ancient Persian God, to distance oursleves from our failure. In this season we experienced slightly more success,
+    an ancient Persian God, to distance ourselves from our failure. In this season we experienced slightly more success,
     we had learned much from our mistakes in the previous year, and dedicated
     lots of time to try and fix them or avoid making the same ones. Crucially,
     the robot still ended up being rushed, partially due to GCSEs, and was unreliable 
-    as a result. We did qualify for the national competetion, however, we were unable 
+    as a result. We did qualify for the national competition, however, we were unable 
     to achieve anything there.
 
     <br><br>
@@ -112,7 +112,7 @@
 
     This was the first year where my main purpose was to be the programmer for the team.
     It took me some time to adjust to my new responsibilities, but also to understand the 
-    quirks of vexcode. Many of the programs for driving, swithces, and other esentials I 
+    quirks of vexcode. Many of the programs for driving, switches, and other esentials I 
     wrote in this season are still used in our robot today.
 
 
@@ -129,7 +129,7 @@
     
     <h2>Current Season - Push Back</h2>
 
-    The current seasons looks as if it is going to be our best one yet. We have analyised 
+    The current seasons looks as if it is going to be our best one yet. We have analysed 
     the mistakes we have made from all our previous seasons, and have been relentless in our goal
     of avoiding them all. Additionally, this year will be our last one participating in vex
     Robotics, so this season acts as a final chance to regain some of the glory of our debut
@@ -139,7 +139,7 @@
     <br><br>
 
     This year, I am continuing my responsibilities as the main programmer. However, I am also
-    now in-charge of our teams notebook, proofing and editing it to ensure that it displays our 
+    now in-charge of our team's notebook, proofing and editing it to ensure that it displays our 
     work as best we can to the judges.
   
   </div>
